tests/dataset/tpc-ds/compiler/pl/q57.out
ERROR: /tmp/q57.pl:60:15: Syntax error: Operator expected
ERROR: /tmp/q57.pl:63:3: Syntax error: Illegal start of term
[]
